Bug 852526 - Make sure the compositor starts unpaused and with a size. r=kats

This changes compositor creation so that we can specify an initial size and
makes sure the local variable in nsWindow reflects that the compositor starts
unpaused.