widget/android/AndroidJavaWrappers.h
@@ -657,6 +657,8 @@ public:
     bool CanBeMetered() { return mCanBeMetered; }
     short ScreenOrientation() { return mScreenOrientation; }
     RefCountedJavaObject* ByteBuffer() { return mByteBuffer; }
+    int Width() { return mWidth; }
+    int Height() { return mHeight; }
 
 protected:
     int mAction;
@@ -686,6 +688,7 @@ protected:
     bool mCanBeMetered;
     short mScreenOrientation;
     nsRefPtr<RefCountedJavaObject> mByteBuffer;
+    int mWidth, mHeight;
 
     void ReadIntArray(nsTArray<int> &aVals,
                       JNIEnv *jenv,
@@ -747,6 +750,9 @@ protected:
     static jfieldID jScreenOrientationField;
     static jfieldID jByteBufferField;
 
+    static jfieldID jWidthField;
+    static jfieldID jHeightField;
+
 public:
     enum {
         NATIVE_POKE = 0,
@@ -773,9 +779,10 @@ public:
         ACTIVITY_RESUMING = 24,
         THUMBNAIL = 25,
         SCREENORIENTATION_CHANGED = 27,
-        COMPOSITOR_PAUSE = 28,
-        COMPOSITOR_RESUME = 29,
-        NATIVE_GESTURE_EVENT = 30,
+        COMPOSITOR_CREATE = 28,
+        COMPOSITOR_PAUSE = 29,
+        COMPOSITOR_RESUME = 30,
+        NATIVE_GESTURE_EVENT = 31,
         dummy_java_enum_list_end
     };
 
